Upgrade dependencies for Jenkins 2.387.3.