@@ -3,18 +3,21 @@ package io.jenkins.plugins.grading;
 import java.util.Collections;
 import java.util.List;
 
+import edu.hm.hafner.coverage.Coverage;
+import edu.hm.hafner.coverage.Metric;
 import edu.hm.hafner.grading.PitConfiguration;
 import edu.hm.hafner.grading.PitScore;
 import edu.hm.hafner.grading.PitScore.PitScoreBuilder;
 import edu.hm.hafner.grading.PitSupplier;
 
-import org.jenkinsci.plugins.pitmutation.PitBuildAction;
-import org.jenkinsci.plugins.pitmutation.targets.MutationStats;
 import hudson.model.Run;
+
+import io.jenkins.plugins.coverage.metrics.model.Baseline;
+import io.jenkins.plugins.coverage.metrics.steps.CoverageBuildAction;
 
 /**
  * Supplies {@link PitScore mutation coverage scores} based on the results of the registered
- * {@link PitBuildAction} instances.
+ * {@link CoverageBuildAction} instances.
  *
  * @author Ullrich Hafner
  */
@@ -22,21 +25,26 @@ class JenkinsPitSupplier extends PitSupplier {
     private final Run<?, ?> run;
 
     JenkinsPitSupplier(final Run<?, ?> run) {
+        super();
+
         this.run = run;
     }
 
     @Override
     protected List<PitScore> createScores(final PitConfiguration configuration) {
-        PitBuildAction action = run.getAction(PitBuildAction.class);
+        CoverageBuildAction action = run.getAction(CoverageBuildAction.class);
         if (action != null) {
-            MutationStats mutationStats = action.getReport().getMutationStats();
-            PitScore score = new PitScoreBuilder().withConfiguration(configuration)
-                    .withDisplayName(action.getDisplayName())
-                    .withTotalMutations(mutationStats.getTotalMutations())
-                    .withUndetectedMutations(mutationStats.getUndetected())
-                    .build();
-            return Collections.singletonList(score);
+            var value = action.getValueForMetric(Baseline.PROJECT, Metric.MUTATION);
+            if (value.isPresent() && value.get() instanceof Coverage) {
+                var coverage = (Coverage)value.get();
+                PitScore score = new PitScoreBuilder().withConfiguration(configuration)
+                        .withDisplayName(action.getDisplayName())
+                        .withTotalMutations(coverage.getTotal())
+                        .withUndetectedMutations(coverage.getMissed())
+                        .build();
+                return Collections.singletonList(score);
+            }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
